--- a/Components/_Imports.razor
+++ b/Components/_Imports.razor
@@ -8,4 +8,6 @@
 @using Microsoft.JSInterop
 @using InventoyManagementSystem
 @using InventoyManagementSystem.Components
-
+@using Blazored.Toast
+@using Blazored.Toast.Services
+@using BlazorBootstrap;
