--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -1,19 +1,29 @@
 ﻿@inherits LayoutComponentBase
 
+@using Blazored.Toast.Configuration
+
+<BlazoredToasts Position="ToastPosition.BottomRight"
+                Timeout="10"
+                IconType="IconType.Material"
+                ShowProgressBar="@true"
+                ShowCloseButton="@true"
+                MaxToastCount="3"/>
 <div class="page">
     <div class="sidebar">
         <NavMenu />
     </div>
 
     <main>
+        
         <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+            
         </div>
 
         <article class="content px-4">
             @Body
         </article>
     </main>
+    
 </div>
 
 <div id="blazor-error-ui">
