--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -1,13 +1,7 @@
 ﻿@inherits LayoutComponentBase
 
-@using Blazored.Toast.Configuration
 
-<BlazoredToasts Position="ToastPosition.BottomRight"
-                Timeout="10"
-                IconType="IconType.Material"
-                ShowProgressBar="@true"
-                ShowCloseButton="@true"
-                MaxToastCount="3"/>
+<BlazoredToasts/>
 <div class="page">
     <div class="sidebar">
         <NavMenu />
