--- a/Components/App.razor
+++ b/Components/App.razor
@@ -10,7 +10,9 @@
     <link href="_content/Blazor.Bootstrap/blazor.bootstrap.css" rel="stylesheet" />
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="app.css" />
-    <link  href="InventoyManagementSystem.styles.css" rel="stylesheet"/>
+    <link  href="InventoyManagementSystem.styles.css" rel="stylesheet">
+
+    
     
     <link rel="icon" type="image/png" href="favicon.png" />
     <HeadOutlet @rendermode="@InteractiveServer"/>
@@ -18,6 +20,7 @@
 
 <body>
     <Routes  @rendermode="@InteractiveServer"/>
+    
     <script src="_framework/blazor.web.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 <!-- Add chart.js reference if chart components are used in your application. -->
