--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -1,7 +1,11 @@
 ﻿@inherits LayoutComponentBase
+@using Blazored.Toast.Configuration
 
 
-<BlazoredToasts/>
+
+<BlazoredToasts Position="ToastPosition.BottomRight"
+                Timeout="5"
+                ShowProgressBar="true"/>
 <div class="page">
     <div class="sidebar">
         <NavMenu />
