--- a/Components/Pages/Inventory.razor
+++ b/Components/Pages/Inventory.razor
@@ -1,5 +1,7 @@
 @page "/Inventory"
+@using InventoyManagementSystem.Components.Modals
 @using Microsoft.EntityFrameworkCore
+
 @rendermode InteractiveServer
 @inject NavigationManager Navigation
 @inject InventoryService InventoryService
@@ -31,10 +33,10 @@
                     <td>@item.Description</td>
                     <td>@item.Quantity</td>
                     <td>
-                        <button class="btn btn-primary"@onclick="() =>OnShowModalUpdateClick(item)">Update Item</button>
+                        <button class="btn btn-primary"@onclick="(() =>ShowUpdateModal(item))">Update Item</button>
                     </td>
                     <td>
-                    <button class="btn btn-danger" @onclick="() => OnShowModalDeleteClick(item)">Delete</button>
+                    <button class="btn btn-danger" @onclick="(() => ShowDeleteModal(item))">Delete</button>
                     </td>
                 </tr>
             }
@@ -45,93 +47,54 @@ else
 {
     <p>No items found.</p>
 }
-<Modal @ref="modalDelete" Title="Are You Sure?">
-    <BodyTemplate>
-        Are you sure you would like to remove this item?
-    </BodyTemplate>
-    <FooterTemplate>
-        <Button Color="ButtonColor.Secondary" @onclick="OnHideModalDeleteClick">Close</Button>
-        <Button class="btn btn-danger" @onclick="DeleteItem">Delete</Button>
-    </FooterTemplate>
-</Modal>
 
 
-<Modal @ref="modalUpdate" Title="Edit Item">
-    <BodyTemplate>
-        <EditForm Model="currentItem" FormName="add-item">
-            <DataAnnotationsValidator />
-            <ValidationSummary />
+<DeleteModal @ref="deleteModal" OnDelete="DeleteItem" />
+<UpdateModal @ref="updateModal" OnSave="UpdateItem"/>
 
-            <div class="form-group">
-                <label for="name">Name</label>
-                <InputText id="name" class="form-control" @bind-Value="currentItem.Name" />
-            </div>
-
-            <div class="form-group">
-                <label for="description">Description</label>
-                <InputTextArea id="description" class="form-control" @bind-Value="currentItem.Description" />
-            </div>
-
-            <div class="form-group">
-                <label for="quantity">Quantity</label>
-                <InputNumber id="quantity" class="form-control" @bind-Value="currentItem.Quantity" />
-            </div>
-        </EditForm>
-    </BodyTemplate>
-    <FooterTemplate>
-        <Button Color="ButtonColor.Secondary" @onclick="OnHideModalUpdateClick">Close</Button>
-        <Button class="btn btn-success" @onclick="UpdateItem">Save</Button>
-    </FooterTemplate>
-</Modal>
 @code {
     private Item currentItem;
+    private DeleteModal deleteModal;
+    private UpdateModal updateModal;
     private List<Item> InventoryItems = new List<Item>{};
 
     protected override async Task OnInitializedAsync()
     {
         InventoryItems = await InventoryService.GetInventoryItemsAsync();
     }
-    private async Task UpdateItem(){
-        await InventoryService.UpdateItemAsync(currentItem);
-        
-        InventoryItems = await InventoryService.GetInventoryItemsAsync(); // Refresh the list
-        await OnHideModalUpdateClick();
+    private async Task LoadInventoryItems()
+    {
+        InventoryItems = await InventoryService.GetInventoryItemsAsync();
     }
+    
 
+    private async Task ShowDeleteModal(Item item)
+    {
+        currentItem = item;
+        await deleteModal.ShowAsync();
+    }
     private async Task DeleteItem()
     {
         await InventoryService.DeleteItemAsync(currentItem.Id);
         
         InventoryItems = await InventoryService.GetInventoryItemsAsync(); // Refresh the list
-        await OnHideModalDeleteClick();
+        
     }
     private void NavigateToAddItem(){
 
         Navigation.NavigateTo("/AddItem");
     }
-    private Modal modalDelete;
-
-    private async Task OnShowModalDeleteClick(Item item)
+    private async Task UpdateItem(Item item)
+    {
+        await InventoryService.UpdateItemAsync(item);
+        await LoadInventoryItems(); // Refresh the list
+    }
+    private async Task ShowUpdateModal(Item item)
     {
         currentItem = item;
-        await modalDelete?.ShowAsync();
+        await updateModal.ShowAsync(item);
     }
-
-    private async Task OnHideModalDeleteClick()
-    {
-        await modalDelete?.HideAsync();
-    }
-    private Modal modalUpdate;
-
-    private async Task OnShowModalUpdateClick(Item item)
-    {
-        currentItem = item;
-        await modalUpdate?.ShowAsync();
-    }
-
-    private async Task OnHideModalUpdateClick()
-    {
-        await modalUpdate?.HideAsync();
-    }
+    
+   
 
 }
