add add item button

--- a/Components/Pages/LogDelivery.razor
+++ b/Components/Pages/LogDelivery.razor
@@ -31,6 +31,7 @@
                     <td>@item.Name</td>
                     <td>@item.Description</td>
                     <td>@item.Quantity</td>
+                    <td><button class="btn btn-primary">Add Item</button></td>
                 </tr>
             }
         </tbody>
